--- a/tutorials/repeat-until-success/notebook.ipynb
+++ b/tutorials/repeat-until-success/notebook.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "This tutorial demonstrates how certain IBM Quantum&trade; systems (those that support dynamic circuits) use mid-circuit measurements to produce a circuit that repeatedly attempts its setup until a syndrome measurement reveals that it has been successful.\n",
     "\n",
-    "You will build an abstract circuit that uses the non-parametrized gate set $\\{H,\\,X,\\,S,\\,\\text{Toffoli}\\}$ to construct a heralded $R_X(\\theta)$ gate on a target qubit, where $\\theta$ satisfies $\\cos\\theta = \\frac35$. Each iteration of the circuit has a finite chance of success, but because successes are heralded, dynamic circuit capabilities are used to repeat the setup until it succeeds."
+    "Build an abstract circuit that uses the non-parametrized gate set $\\{H,\\,X,\\,S,\\,\\text{Toffoli}\\}$ to construct a heralded $R_X(\\theta)$ gate on a target qubit, where $\\theta$ satisfies $\\cos\\theta = \\frac35$. Each iteration of the circuit has a finite chance of success, but because successes are heralded, dynamic circuit capabilities are used to repeat the setup until it succeeds."
    ]
   },
   {
@@ -127,7 +127,7 @@
     "= \\frac58\n",
     "$$\n",
     "\n",
-    "If there is a failure, you should reset the \"dirty\" state and start again.  Because you know what is applied in the case of a failure, you can use this knowledge to perform the reset efficiently without using a general hardware reset.  For the two auxiliary qubits, this is an $X$ gate conditioned on its respective measurement being $1$.  IBM&reg; hardware has a special fast path for when qubits are conditioned on the result of their own measurement, so this is more efficient than most control flows."
+    "If there is a failure, reset the \"dirty\" state and start again.  Because you know what is applied in the case of a failure, you can use this knowledge to perform the reset efficiently without using a general hardware reset.  For the two auxiliary qubits, this is an $X$ gate conditioned on its respective measurement being $1$.  IBM&reg; hardware has a special fast path for when qubits are conditioned on the result of their own measurement, so this is more efficient than most control flows."
    ]
   },
   {
