--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Hello world\n",
     "\n",
-    "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also watch this Hello World in practice in the Hello World episode of the Coding with Qiskit video series. "
+    "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also watch this Hello World in practice in the Hello World episode of the Coding with Qiskit 1.0 video series. "
    ]
   },
   {
@@ -188,7 +188,7 @@
     "\n",
     "When executing circuits on a device, it is an important step to optimize the set of instructions which the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and takes both the device's basis gates as well as its qubit connectivity into account.\n",
     "\n",
-    "The code snippet below will instantiate a real device to submit a job to and transform the circuit to match that backend's ISA."
+    "The following code instantiates a real device to submit a job to and transform the circuit to match that backend's ISA."
    ]
   },
   {
@@ -444,6 +444,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b3d0d74",
+   "metadata": {},
+   "source": [
+    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the system. The `ZZ` operator between the 0th and 1st qubit should be the largest, and the `ZZ` operator between the 0th qubit and the 100th qubit should be the smallest."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "863a4ec9",
@@ -476,7 +484,7 @@
    "source": [
     "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
-    "Transpile this circuit and map the observables to the hardware's layout."
+    "Transpile this circuit and map the observables to the hardware's layout (ISA). "
    ]
   },
   {
@@ -504,7 +512,7 @@
    "source": [
     "### Step 3. Execute on hardware\n",
     "\n",
-    "Submit the job and enable error suppression by using a technique to reduce errors called [dynamical decoupling.](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions) "
+    "Submit the job and enable error suppression by using a technique to reduce errors called [dynamical decoupling.](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions) The resilience level specifies how much resilience to build against errors. Higher levels generate more accurate results, at the expense of longer processing times.  For further explanation of the options set in the following code, see [Configure error mitigation for Qiskit Runtime.](../run/configure-error-mitigation)"
    ]
   },
   {
@@ -552,7 +560,7 @@
    "source": [
     "### Step 4. Post-process results\n",
     "\n",
-    "After the job has completed, we can plot the results and see that $\\langle Z_0 Z_i \\rangle$ decreases with increasing $i$, even though in an ideal simulation we should see that all $\\langle Z_0 Z_i \\rangle$ should be 1."
+    "After the job completes, plot the results and notice that $\\langle Z_0 Z_i \\rangle$ decreases with increasing $i$, even though in an ideal simulation we should see that all $\\langle Z_0 Z_i \\rangle$ should be 1. "
    ]
   },
   {
@@ -570,11 +578,11 @@
     "job = service.job(job_id)\n",
     "\n",
     "# data\n",
-    "data = list(range(1, len(operators)+1))\n",
-    "result = job.result()[0] # Estimator V2\n",
-    "values = result.data.evs # Estimator V2\n",
-    "# values = job.result().values # EstimatorV1\n",
-    "values = [v / values[0] for v in values]\n",
+    "data = list(range(1, len(operators)+1)) # Distance between the Z operators\n",
+    "result = job.result()[0] # Use for EstimatorV2.\n",
+    "values = result.data.evs # Expectation value at each Z operator. Use for Estimator V2.\n",
+    "# values = job.result().values # Use for EstimatorV1\n",
+    "values = [v / values[0] for v in values] # Normalize the expectation values to evaluate how they decay with distance.\n",
     "\n",
     "# plotting graph\n",
     "plt.scatter(data, values, marker='o', label='ibm_sherbrooke')\n",
@@ -582,6 +590,14 @@
     "plt.ylabel(r'$\\langle Z_0 Z_i \\rangle / \\langle Z_0 Z_1 \\rangle $')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0afc307c",
+   "metadata": {},
+   "source": [
+    "The previous plot shows that as the distance between qubits increases, the signal decays because there is noise on the system. "
    ]
   },
   {
