--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -608,8 +608,9 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  *   Learn how to [build circuits](../build/) in more detail.\n",
-    "  *   Try one of the [workflow example tutorials.](https://learning.quantum.ibm.com/catalog/tutorials?category=workflow-example)\n",
+    "  -   Learn how to [build circuits](../build/) in more detail.\n",
+    "  \n",
+    "  -   Try one of the [workflow example tutorials.](https://learning.quantum.ibm.com/catalog/tutorials?category=workflow-example)\n",
     "</Admonition>"
    ]
   }
