--- a/docs/run/get-backend-information.ipynb
+++ b/docs/run/get-backend-information.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "214e51c9-4818-408b-9421-3e513e77a713",
+   "id": "38a02b47-8d5e-4a51-9448-3e24a9656cf9",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2126b05d-1cc8-4230-bfe3-25461a0f1b5b",
+   "id": "1af5ab76-c979-4908-b292-18aeb86fbdd3",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -23,21 +23,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2074e1b8-d294-4c5b-82ba-cd9d7a190598",
+   "id": "859739b7-df70-43ed-8074-ac40874103e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('simulator_stabilizer')>,\n",
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_kyoto')>,\n",
        " <IBMBackend('ibm_osaka')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibmq_qasm_simulator')>,\n",
-       " <IBMBackend('simulator_extended_stabilizer')>,\n",
-       " <IBMBackend('simulator_mps')>,\n",
-       " <IBMBackend('simulator_statevector')>,\n",
-       " <IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_kyoto')>]"
+       " <IBMBackend('ibm_sherbrooke')>]"
       ]
      },
      "execution_count": 1,
@@ -55,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad27cfef-1684-4c77-80ab-aef61d204acd",
+   "id": "a529ca05-2e7f-4cfb-8593-7fcf16605df9",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend) instance representing that particular backend:"
@@ -64,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8716516-ded8-45b5-9304-fc199fa3a877",
+   "id": "3fe0e47c-0909-452f-9fac-725013f7cc15",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f8f3f5-4014-454b-8783-09291e246f69",
+   "id": "42f5a826-9769-438f-9006-32e652ad5c92",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -101,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9db4aaa2-f23c-4141-b7aa-07f84a679292",
+   "id": "35a0fe0e-9f5d-4839-a550-00f7ffef20ea",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de23dcc-c2ba-4338-b1e8-4086ed653240",
+   "id": "39ae720d-6073-47fe-9bfa-c755dfe9e22f",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -132,17 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4c296c69-6f30-4cf1-97c5-42989e30db8b",
+   "execution_count": 2,
+   "id": "52dac71b-f57c-4482-bc5b-50172014cfd1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('simulator_stabilizer')>"
+       "<IBMBackend('ibm_kyoto')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc892148-094e-4a5b-8514-a96436dce1b1",
+   "id": "aa6be8fe-fef8-4652-99f8-ebe5948982d8",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -166,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e7e3c43-4aa1-43d2-93b5-31e4abbb3dd5",
+   "id": "f894f518-98ed-40cd-97f4-1780c06be244",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac81677d-12bd-4671-8452-3107edcfbd50",
+   "id": "7832d222-86c7-4412-8d33-edaac4e27524",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)."
@@ -200,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b212d0-c5dc-4640-8a00-76255784ef72",
+   "id": "b5f675a5-f295-4d80-87f4-2b48af34d234",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -216,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c1fc8ca-fd06-409f-9a5a-ce99d8b936e4",
+   "id": "7aaf40eb-3073-42d8-9764-e42747368b95",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce06354-4fcb-444d-a2d6-abe6caf1d318",
+   "id": "e6d716f5-aeed-4aba-ae59-a9672965a6fe",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -247,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8b88454-dfef-4c35-b4e2-a03fe34eaa07",
+   "id": "0eb87c44-57b2-4b90-8458-8e2f813a657d",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "931a81bc-8bd1-4aba-bfa5-e05984df713d",
+   "id": "69b65568-2931-4cbd-932b-8b6135a9820b",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -276,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "040f5267-f635-4871-89bb-14a38904033e",
+   "id": "178ec9a9-dc95-4876-9a68-1fab621aa37a",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c28c0dc-6d24-4554-bbe8-8e6c51f563d9",
+   "id": "36a47004-69d0-4af6-83b3-0e5e1247b5bf",
    "metadata": {},
    "source": [
     "## Next steps\n",
