--- a/tutorials/build-repetition-codes/build-repetition-codes.ipynb
+++ b/tutorials/build-repetition-codes/build-repetition-codes.ipynb
@@ -12,13 +12,15 @@
    "source": [
     "# Build repetition codes\n",
     "\n",
-    "This tutorial took 2 seconds of QPU usage on ibm_algiers.  Your results may vary.\n",
+    "*Estimated QPU usage: 2 seconds (tested on IBM Algiers)*\n",
     "\n",
     "## Background\n",
     "\n",
     "To enable real-time quantum error correction (QEC), you need to be able to dynamically control quantum program flow during execution so that quantum gates can be conditioned on measurement results. This tutorial runs the bit-flip code, which is a very simple form of QEC. It demonstrates a dynamic quantum circuit that can protect an encoded qubit from a single bit-flip error, and then evaluates the bit-flip code performance.\n",
     "\n",
-    "You can exploit additional ancilla qubits and entanglement to measure *stabilizers* that do not transform encoded quantum information, while still informing you of some classes of errors that might have occurred. A quantum stabilizer code encodes $k$ logical qubits into $n$ physical qubits. Stabilizer codes critically focus on correcting a discrete error set with support from the Pauli group $\\Pi^n$."
+    "You can exploit additional ancilla qubits and entanglement to measure *stabilizers* that do not transform encoded quantum information, while still informing you of some classes of errors that might have occurred. A quantum stabilizer code encodes $k$ logical qubits into $n$ physical qubits. Stabilizer codes critically focus on correcting a discrete error set with support from the Pauli group $\\Pi^n$.\n",
+    "\n",
+    "For more information about QEC, refer to [Quantum Error Correction for Beginners.](https://arxiv.org/abs/0905.2794)"
    ]
   },
   {
@@ -30,9 +32,8 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "* Qiskit SDK 1.0 or later\n",
-    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
-    "* Visualization support (`pip install qiskit[visualization]`)"
+    "* Qiskit SDK 1.0 or later with visualization support (`pip install qiskit[visualization]`)\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later"
    ]
   },
   {
@@ -217,7 +218,7 @@
    "source": [
     "## Step 2. Optimize the problem for quantum execution\n",
     "\n",
-    "To reduce the total job execution time, Qiskit primitives only accept circuits and observables that conforms to the instructions and connectivity supported by the target system (referred to as instruction set architecture (ISA) circuits and observables)."
+    "To reduce the total job execution time, Qiskit primitives only accept circuits and observables that conforms to the instructions and connectivity supported by the target system (referred to as instruction set architecture (ISA) circuits and observables).  [Learn more about transpilation.](https://docs.quantum.ibm.com/transpile)"
    ]
   },
   {
@@ -446,52 +447,6 @@
     "print(f'Completed bit code experiment data measurement counts (corrected): {corrected_data_result}')\n",
     "print(f'Completed bit code experiment syndrome measurement counts (corrected): {corrected_syndrome_result}')\n",
     "decode_result(corrected_data_result, corrected_syndrome_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "b55721f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.23.0'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import qiskit_ibm_runtime\n",
-    "\n",
-    "qiskit_ibm_runtime.version.get_version_info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "a6f30a15",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.0.2'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import qiskit\n",
-    "\n",
-    "qiskit.version.get_version_info()"
    ]
   }
  ],
