--- a/docs/guides/postprocess-results.mdx
+++ b/docs/guides/postprocess-results.mdx
@@ -1,4 +1,4 @@
-# Postprocess results
+# Post-process results
 
 This final "post-process results" step of a Qiskit pattern involves stitching the outputs from the prior step back together to obtain the desired result. This can involve a range of classical data processing steps such as visualising results, readout error mitigation techniques, marginalizing quasi-probability distributions to ascertain results on smaller sets of qubits or post-selection on inherent properties of the problem, such as total spin, parity, or particle conservation by removing unphysical observables.
 
